--- a/simple-todo-list/style.css
+++ b/simple-todo-list/style.css
@@ -6,15 +6,7 @@
 ul{
     list-style-type: none;
 }
-:root{
-    --first-color: rgb(120, 235, 120);
-    --second-color: rgb(66, 63, 63);
-    --third-color: rgb(255, 255, 255);
 
-    --first-bg-color: lightgreen;
-    --second-bg-color: rgba(255, 255, 255, 0.7);
-    --third-bg-color: rgb(255, 255, 255);
-}
 html{
     box-sizing: border-box;
     font-family: sans-serif;
@@ -25,7 +17,7 @@ body{
     height: 100vh;
     display: flex;
     justify-content: center;
-    background-color: var(--first-bg-color);
+    background-color: lightgreen;
     padding: 5rem;
 }
 
@@ -38,8 +30,8 @@ main{
 
 main header h1{
     width: 100%;
-    background-color: var(--second-bg-color);
-    color: var(--first-color);
+    background-color: rgba(255, 255, 255, 0.7);
+    color: rgb(120, 235, 120);
     font-size: 3rem;
     text-align: center;
     padding: 1rem;
@@ -50,7 +42,7 @@ main header input{
     border: none;
     outline: none;
     margin-top: 1rem;
-    background-color: var(--second-bg-color);
+    background-color: rgba(255, 255, 255, 0.7);
     height: 4rem;
     padding: 2rem;
     font-size: 1.6rem;
@@ -58,14 +50,14 @@ main header input{
 
 .list {
     margin-top: 2rem;
-    background-color: var(--second-bg-color);
+    background-color: rgba(255, 255, 255, 0.7);
     padding: 1rem;
 }
 
 .to-do{
     width: 100%;
-    background-color: var(--third-bg-color);
-    color: var(--second-color);
+    background-color: rgb(255, 255, 255);
+    color: rgb(66, 63, 63);
     padding: 1rem;
     margin-top: 1rem;
     font-size: 1.6rem;
@@ -80,12 +72,25 @@ main header input{
     border: none;
     outline: none;
     padding: 1rem;
-    background-color: var(--first-bg-color);
+    background-color: rgb(98, 187, 98);
     margin-top: 1.5rem;
-    color: var(--third-color);
+    color: rgb(255, 255, 255);
     font-size: 1.6rem;
     font-weight: 600;
     letter-spacing: 0.5px;
     cursor: pointer;
 }
 
+.clear:hover{
+    background-color: rgb(114, 207, 114);
+}
+
+
+@media screen and (max-width: 768px) {
+    body {
+        padding: 2.5rem ;
+    }
+    main {
+        width: 95%;
+    }
+};
