--- a/split-landing-page/style.css
+++ b/split-landing-page/style.css
@@ -26,3 +26,110 @@ body{
     overflow: hidden;
 }
 
+.container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: #333;
+}
+
+.split{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.ps{
+    left: 0;
+    background-image: url(ps.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.ps::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--ps-bg-color);
+}
+
+.xbox{
+    right: 0;
+    background: url(xbox.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.xbox::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--xbox-bg-color);
+}
+
+.ps,
+.xbox,
+.ps::before,
+.xbox::before{
+    transition: all var(--speed);
+}
+
+
+h1{
+    font-size: 4.8rem;
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+}
+
+.btn{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    top: 40%;
+    transform: translateX(-50%);
+    text-decoration: none;
+    color: #fff;
+    border: .2rem solid #fff;
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 15rem;
+    padding: 1.5rem;
+    background: transparent;
+}
+
+.ps .btn:hover{
+    background-color: var(--ps-btn-hover);
+    border-color: var(--ps-btn-hover);
+}
+
+.xbox .btn:hover{
+    background-color: var(--xbox-btn-hover);
+    border-color: var(--xbox-btn-hover);
+}
+
+.hover-ps .ps{
+    width: var(--hover-width);
+}
+
+.hover-ps .xbox{
+    width: var(--other-width);
+}
+
+.hover-xbox .xbox{
+    width: var(--hover-width);
+}
+
+.hover-xbox .ps{
+    width: var(--other-width);
+}
